<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_radSimp">

    <fragment
        android:id="@+id/nav_radSimp"
        android:name="com.alexliu07.mathbox.ui.RadSimpFragment"
        android:label="@string/text_radSimp"
        tools:layout="@layout/fragment_radsimp" />

    <fragment
        android:id="@+id/nav_facDecomp"
        android:name="com.alexliu07.mathbox.ui.FacDecompFragment"
        android:label="@string/text_facDecomp"
        tools:layout="@layout/fragment_facdecomp" />

    <fragment
        android:id="@+id/nav_comFacFind"
        android:name="com.alexliu07.mathbox.ui.ComFacFindFragment"
        android:label="@string/text_comFacFind"
        tools:layout="@layout/fragment_comfacfind" />

    <fragment
        android:id="@+id/nav_fracAppr"
        android:name="com.alexliu07.mathbox.ui.FracApprFragment"
        android:label="@string/text_fracAppr"
        tools:layout="@layout/fragment_fracappr" />
</navigation>