<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ComFacFindFragment">

    <EditText
        android:id="@+id/comFacFind_input_first_num"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/input_first_num"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/comFacFind_input_second_num"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/input_second_num"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comFacFind_input_first_num" />

    <TextView
        android:id="@+id/comFacFind_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="143dp"
        android:gravity="center"
        android:text="@string/result_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comFacFind_input_second_num" />

    <WebView
        android:id="@+id/comFacFind_result_display"
        android:layout_width="412dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comFacFind_result_text">

    </WebView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/comFacFind_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="356dp"
        android:layout_marginTop="545dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/submit_btn_text"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>