<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.RadSimpFragment">

    <ImageView
        android:id="@+id/radSimp_formula_hint"
        android:layout_width="114dp"
        android:layout_height="109dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="149dp"
        android:contentDescription="@string/formula_hint"
        android:src="@drawable/radsimp_formula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/radSimp_inputX_hint"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/input_num_X"
        android:src="@drawable/input_x_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/radSimp_inputX"
        android:layout_width="163dp"
        android:layout_height="61dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/input_num_general"
        android:inputType="numberSigned|number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radSimp_inputX_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/radSimp_inputN_hint"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/input_num_N"
        android:src="@drawable/input_n_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radSimp_inputX_hint" />

    <EditText
        android:id="@+id/radSimp_inputN"
        android:layout_width="163dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/input_num_general"
        android:inputType="number"
        android:text="@string/radSimp_default_N"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radSimp_inputN_hint"
        app:layout_constraintTop_toBottomOf="@+id/radSimp_inputX" />

    <TextView
        android:id="@+id/radSimp_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="142dp"
        android:gravity="center"
        android:text="@string/result_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/facDecomp_result_display"
        android:layout_width="412dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radSimp_result_text">

    </WebView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/radSimp_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="356dp"
        android:layout_marginTop="545dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/submit_btn_text"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>