<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FracApprFragment">

    <ImageView
        android:id="@+id/fracAppr_formula_hint"
        android:layout_width="114dp"
        android:layout_height="109dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="149dp"
        android:contentDescription="@string/formula_hint"
        android:src="@drawable/fraction_formula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fracAppr_inputA_hint"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/input_num_general"
        android:src="@drawable/input_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fracAppr_inputB_hint"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/input_num_general"
        android:src="@drawable/input_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fracAppr_inputA_hint" />

    <EditText
        android:id="@+id/fracAppr_inputB"
        android:layout_width="163dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/input_num_general"
        android:inputType="numberSigned|numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/fracAppr_inputB_hint"
        app:layout_constraintTop_toBottomOf="@+id/fracAppr_inputA" />

    <EditText
        android:id="@+id/fracAppr_inputA"
        android:layout_width="163dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/input_num_general"
        android:inputType="numberSigned|numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/fracAppr_inputA_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fracAppr_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="142dp"
        android:gravity="center"
        android:text="@string/result_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/fracAppr_result_display"
        android:layout_width="412dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fracAppr_result_text">

    </WebView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fracAppr_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="356dp"
        android:layout_marginTop="545dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/submit_btn_text"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/submit" />
</androidx.constraintlayout.widget.ConstraintLayout>